.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Internal_Vacancy__c.object
<CustomObject>
    <description>Used to store the published vacancy object information and this record created through process builder. All this field and fieldset identical to vacancy object</description>
    <fields>
        <fullName>xcdhcm__Base_salary__c</fullName>
        <description>JIRA-1197</description>
        <label>Base salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Close_date__c</fullName>
        <description>JRIA - 1197</description>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Commission_bonus__c</fullName>
        <label>Commission/bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Compensation_notes__c</fullName>
        <description>JIRA - 1197</description>
        <label>Compensation notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department_name__c</fullName>
        <description>JIRA - 1197</description>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Educational_requirements__c</fullName>
        <description>JIRA -1197</description>
        <label>Educational requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Internal_Vacancy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JIRA - 1197</description>
        <label>System: publish internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_description__c</fullName>
        <description>JIRA - 1197</description>
        <label>Job description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_role_notes__c</fullName>
        <description>JIRA - 1197</description>
        <label>Job role notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_title__c</fullName>
        <description>JIRA - 1197</description>
        <label>Job title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Keywords__c</fullName>
        <description>JIRA - 1197</description>
        <label>Keywords</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Location_name__c</fullName>
        <description>JIRA - 1197</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Max_OTE__c</fullName>
        <description>JIRA - 1197</description>
        <label>Max OTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number_of_open_roles__c</fullName>
        <description>JIRA - 1197</description>
        <label>Number of open positions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Open_date__c</fullName>
        <description>JIRA - 1197</description>
        <label>Open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Publish_salary_external__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JIRA - 1197</description>
        <label>Publish salary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Publish_vacancy_external__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JIRA - 1197</description>
        <label>System: publish internal and external</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Responsibilities__c</fullName>
        <description>JIRA - 1197</description>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Skills_required__c</fullName>
        <description>JIRA - 1197</description>
        <label>Skills required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Target_OTE__c</fullName>
        <description>JIRA - 1197</description>
        <label>Target OTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>JIRA - 1197</description>
        <label>System: vacancy‎ source record</label>
        <referenceTo>xcdhcm__Vacancy__c</referenceTo>
        <relationshipLabel>Internal Vacancies</relationshipLabel>
        <relationshipName>Internal_Vacancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy_notes__c</fullName>
        <description>JIRA - 1197</description>
        <label>Vacancy notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy_on_site__c</fullName>
        <description>JIRA - 1197</description>
        <label>Vacancy‎ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy_status__c</fullName>
        <label>Vacancy status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Longlist confirmed</fullName>
                </value>
                <value>
                    <fullName>Shortlist confirmed</fullName>
                </value>
                <value>
                    <fullName>Offer Made</fullName>
                </value>
                <value>
                    <fullName>Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internal Vacancies</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Vacancy__c</columns>
        <columns>xcdhcm__Job_title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IVAC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Vacancies</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>xcdhcm__Internal__c</fullName>
        <label>Internal</label>
    </sharingReasons>
</CustomObject>